# FileTransferringApp_DesktopClient

./: Cargo.toml  README.md
src/: app.rs  handlers.rs  main.rs  styles.rs  ui.rs  utils.rs
