[package]
name = "test1"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["wgpu", "image"] }
reqwest = { version = "0.12.7", features = ["json", "blocking", "multipart"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.127"
serde = { version = "1.0.210", features = ["derive"] }

dotenv = "0.15"
native-dialog = "0.7"